src/test/resources/error/implicitJoinViaNonExistentPath/schema.graphqls
type Query {
  student(id: ID!): StudentVedInstitusjon
}

type StudentVedInstitusjon @node(table: "STUDENT") {
  id: ID!
  #there is no path from STUDENT to EMNE, via EKSAMENSTILPASNING
  emner: [Emne!]! @resolver @reference(via: [ReferenceElement {table: "EKSAMENSTILPASNING"}])
}

type Eksamenstilpasningssoknad @node(table: "EKSAMENSTILPASNING") {
  id: ID!
}

type Emne @node {
  id: ID!
}

